force-app/main/default/objects/Contingency__c/Contingency__c.object-meta.xml
<CustomObject>
    <label>Contingency</label>
    <nameField>
        <displayFormat>{000000}</displayFormat>
        <label>Contingency Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Contingencies</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>