force-app/main/default/objects/Contingency__c/fields/Area__c.field-meta.xml
<CustomField>
    <fullName>Area__c</fullName>
    <label>Area</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Area1</fullName>
            </value>
            <value>
                <fullName>Area2</fullName>
            </value>
            <value>
                <fullName>Area3</fullName>
            </value>
            <value>
                <fullName>Area4</fullName>
            </value>
            <value>
                <fullName>Area5</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>