force-app/main/default/objects/Contingency__c/fields/Sub_Area__c.field-meta.xml
<CustomField>
    <fullName>Sub_Area__c</fullName>
    <label>Sub Area</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>S Area1</fullName>
            </value>
            <value>
                <fullName>S Area2</fullName>
            </value>
            <value>
                <fullName>S Area3</fullName>
            </value>
            <value>
                <fullName>S Area4</fullName>
            </value>
            <value>
                <fullName>S Area5</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>